Archive2/11/77d3c052d69bc8/output
main.cpp:11:28: error: expected ';' before '<' token
     using Base<Ts...>::Base<int>;
                            ^
main.cpp:11:28: error: expected unqualified-id before '<' token
main.cpp: In function 'int main()':
main.cpp:14:41: error: use of deleted function 'Derived<int, double>::Derived()'
 int main() { (void)Derived<int, double>(); }
                                         ^
main.cpp:10:8: note: 'Derived<int, double>::Derived()' is implicitly deleted because the default definition would be ill-formed:
 struct Derived : Base<Ts...> {
        ^
main.cpp:10:8: error: no matching function for call to 'Base<int, double>::Base()'
main.cpp:6:5: note: candidate: template<class T> Base<Ts>::Base()
     Base();
     ^
main.cpp:6:5: note:   template argument deduction/substitution failed:
main.cpp:10:8: note:   couldn't deduce template parameter 'T'
 struct Derived : Base<Ts...> {
        ^
main.cpp:4:8: note: candidate: constexpr Base<int, double>::Base(const Base<int, double>&)
 struct Base {
        ^
main.cpp:4:8: note:   candidate expects 1 argument, 0 provided
main.cpp:4:8: note: candidate: constexpr Base<int, double>::Base(Base<int, double>&&)
main.cpp:4:8: note:   candidate expects 1 argument, 0 provided
